--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,52 @@
-transformers
-datasets
-torch
-huggingface_hub
-accelerate
-scikit-learn
+accelerate==1.10.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+colorama==0.4.6
+datasets==4.0.0
+dill==0.3.8
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+huggingface-hub==0.34.4
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.6.4
+multiprocess==0.70.16
+networkx==3.5
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.1
+pillow==11.0.0
+propcache==0.3.2
+psutil==7.0.0
+pyarrow==21.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2025.7.33
+requests==2.32.4
+safetensors==0.6.2
+scikit-learn==1.7.1
+scipy==1.16.1
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+torch==2.8.0+cu126
+torchvision==0.23.0+cu126
+tqdm==4.67.1
+transformers==4.55.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+wheel==0.45.1
+xxhash==3.5.0
+yarl==1.20.1
