--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 accelerate==1.10.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
@@ -11,10 +12,12 @@ dill==0.3.8
 filelock==3.18.0
 frozenlist==1.7.0
 fsspec==2025.3.0
+grpcio==1.74.0
 huggingface-hub==0.34.4
 idna==3.10
 Jinja2==3.1.6
 joblib==1.5.1
+Markdown==3.8.2
 MarkupSafe==3.0.2
 mpmath==1.3.0
 multidict==6.6.4
@@ -25,6 +28,7 @@ packaging==25.0
 pandas==2.3.1
 pillow==11.0.0
 propcache==0.3.2
+protobuf==6.31.1
 psutil==7.0.0
 pyarrow==21.0.0
 python-dateutil==2.9.0.post0
@@ -38,6 +42,8 @@ scipy==1.16.1
 setuptools==80.9.0
 six==1.17.0
 sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 threadpoolctl==3.6.0
 tokenizers==0.21.4
 torch==2.8.0+cu126
@@ -47,6 +53,7 @@ transformers==4.55.0
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+Werkzeug==3.1.3
 wheel==0.45.1
 xxhash==3.5.0
 yarl==1.20.1
