Improved data washing

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "convertFiles": [
-        "data/中国专利数据库2001年_sample.csv"
+        "data/中国专利数据库2025年.csv"
     ],
     "outputFile": "dataset/data.json",
     "labelField": "IPC主分类号",
@@ -242,5 +242,33 @@
         "F25D",
         "A21B",
         "A47J"
+    ],
+    "removeKeywords": [
+        "\n",
+        "来源：百度搜索“马克数据网”",
+        "更多数据：搜索“马克数据网”",
+        "（来源 马克数据网）",
+        "关注公众号“马克数据网”",
+        "该数据由【马克数据网】整理",
+        "（更多数据，详见马克数据网）",
+        "微信公众号“马克 数据网”",
+        "（来自 马克数据网）",
+        "微信公众号“马克数据网”",
+        "来自马克数据网",
+        "关注微信公众号“马克数据网”",
+        "（macrodatas.cn） ",
+        "（来 自 马 克 数 据 网）",
+        "马 克 数 据 网",
+        "来源：马 克 数 据 网",
+        "来源：“马 克 团 队”",
+        "百度搜索“马 克 数 据 网”",
+        "数据由“马 克 数 据”整理",
+        "来源：www.macrodatas.cn",
+        "来自：“马 克 团 队”",
+        "关注公众号“马 克 数 据 网”",
+        "（来 自 马 克 数 据 网）",
+        "来源：百度“马 克 数据网”",
+        "来源：百度“马 克 数据网”",
+        "数据由“马 克 团 队”整理"
     ]
 }
